# Algorithm

./: .gitignore  CMakeLists.txt  main.c
Problems/: README
Problems/1/: problem  solution.c  solution.h
Problems/2/: problem  solution.c  solution.h
Problems/3/: find-max-subarray.c  find-max-subarray.h  problem
Problems/4/: Strassen.c  Strassen.h  problem
array_function_pointer/: array_function_pointer.c  array_function_pointer.h
bubble_sort/: bubble_sort.c  bubble_sort.h
common/: common.c  common.h
insertion_sort/: insertion_sort.c  insertion_sort.h
merge_sort/: merge_sort.c  merge_sort.h
search_bin/: search_bin.c  search_bin.h
select_sort/: select_sort.c  select_sort.h
